--- a/prompting.ipynb
+++ b/prompting.ipynb
@@ -21,121 +21,13 @@
    "execution_count": null,
    "id": "bf0e9e92-eefa-4b73-a8f7-1c5cc87e82b4",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fc810009d3fe48bab1700c514ccd6fc7",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "tokenizer_config.json:   0%|          | 0.00/222 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Mara\\anaconda3\\lib\\site-packages\\huggingface_hub\\file_download.py:157: UserWarning: `huggingface_hub` cache-system uses symlinks by default to efficiently store duplicated files but your machine does not support them in C:\\Users\\Mara\\.cache\\huggingface\\hub\\models--bigscience--bloom. Caching files will still work but in a degraded version that might require more space on your disk. This warning can be disabled by setting the `HF_HUB_DISABLE_SYMLINKS_WARNING` environment variable. For more details, see https://huggingface.co/docs/huggingface_hub/how-to-cache#limitations.\n",
-      "To support symlinks on Windows, you either need to activate Developer Mode or to run Python as an administrator. In order to see activate developer mode, see this article: https://docs.microsoft.com/en-us/windows/apps/get-started/enable-your-device-for-development\n",
-      "  warnings.warn(message)\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "549c537b9b114137a4bb6a33d8aaba57",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "tokenizer.json:   0%|          | 0.00/14.5M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b537c5d9e8794a5caff0dc4f7303288e",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "special_tokens_map.json:   0%|          | 0.00/85.0 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dfae67567c814cc085ac73d42f9dfbcd",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "config.json:   0%|          | 0.00/573 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b4f5691eb2e1425383746f212648a88e",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "model.safetensors.index.json:   0%|          | 0.00/63.7k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f662d47a85264bfc8e6278560acc3f5d",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading shards:   0%|          | 0/72 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a440004f78404868afd1c5124490364d",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "model_00001-of-00072.safetensors:   0%|          | 0.00/7.19G [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from transformers import AutoModelForCausalLM, AutoTokenizer\n",
     "import json\n",
     "\n",
     "# Loading the model from Hugging Face \n",
-    "model_name = \"bigscience/bloom\"\n",
+    "model_name = \"openai-community/gpt2\"\n",
     "tokenizer = AutoTokenizer.from_pretrained(model_name)\n",
     "model = AutoModelForCausalLM.from_pretrained(model_name) \n",
     "\n",
@@ -150,7 +42,8 @@
     "def get_response(propmt): \n",
     "    modified_prompt = prompt +\"\\nAnswer with 'yes' or 'no':\"\n",
     "    inputs = tokenizer(modified_prompt, return_tensors=\"pt\")\n",
-    "    outputs = model.generate(inputs.input_ids, max_length=50)\n",
+    "    outputs = model.generate(inputs.input_ids, attention_mask=inputs.attention_mask,\n",
+    "                             max_new_tokens=10,pad_token_id=tokenizer.eos_token_id )\n",
     "    response = tokenizer.decode(outputs[0], skip_special_tokens=True)\n",
     "    \n",
     "    # extracting the answer \n",
@@ -163,23 +56,19 @@
     "# reading the prompts \n",
     "data = read_jsonl(\"explicit_output.jsonl\")\n",
     "\n",
+    "# processing the prompts for answers\n",
+    "for item in data:\n",
+    "    prompt = item[\"filled_template\"]\n",
+    "    response = get_response(prompt)\n",
+    "    item[\"decision\"] = response  # Add decision directly to the item\n",
     "\n",
-    "# procesing the prompts for answers\n",
-    "results = []\n",
-    "for item in data: \n",
-    "    prompt = item[\"tamplate\"] # decision question prompt \n",
-    "    respinse = get_response(propmt)\n",
-    "    result.append({\n",
-    "        \"prompt\": prompt, \n",
-    "        \"response\": response\n",
-    "    })\n",
-    "    \n",
-    "# saving the results to a file\n",
-    "with open('responses.json', 'w', encoding='utf-8') as f:\n",
-    "    json.dump(results, f, ensure_ascii=False, indent=4)\n",
+    "# saving the modified data back to the same file (Overwrites the existing file)\n",
+    "with open(\"explicit_output.jsonl\", 'w', encoding='utf-8') as f:\n",
+    "    for item in data:\n",
+    "        json.dump(item, f, ensure_ascii=False)\n",
+    "        f.write('\\n')\n",
     "\n",
-    "# to see when it is done\n",
-    "print(\"Responses have been saved to responses.json.\")"
+    "print(\"Decisions have been added to 'explicit_output.jsonl'.\")"
    ]
   },
   {
