--- a/latex report/report-latex.tex
+++ b/latex report/report-latex.tex
@@ -195,25 +195,131 @@ The primary observation from our work is the disparity in access to the majority
 
 \begin{thebibliography}{}
 
-\bibitem[Lucchi(2023)]{Lucchi2023}
-Lucchi, A. 2023.
-\newblock Large Language Models: Trends and Future Directions.
-\newblock \textit{AI Review Journal}, 22(3), 112-135.
+\bibitem[(Arrieta et al., 2019)]{Arrieta2019}
+Arrieta, A., Díaz-Rodríguez, N., Javier Del Ser, Bennetot, A., Siham Tabik, Barbado, A., García, S., Gil-López, S., Molina, D., Benjamins, R., Chatila, R., & Herrera, F. (2019).
+\newblock Explainable Artificial Intelligence (XAI): Concepts, Taxonomies, Opportunities and Challenges toward Responsible AI.
+\newblock \textit{ArXiv (Cornell University)}.
+\newblock \url{https://doi.org/10.48550/arxiv.1910.10045}
 
-\bibitem[Taulli(2023)]{Taulli2023}
-Taulli, T. 2023.
-\newblock AI Models and Their Data Requirements.
-\newblock \textit{Technology Insights}, 15(4), 210-225.
+\bibitem[(Brown et al., 2020)]{Brown2020}
+Brown, T., Mann, B., Ryder, N., Subbiah, M., Kaplan, J., Dhariwal, P., Neelakantan, A., Shyam, P., Sastry, G., Askell, A., Agarwal, S., Herbert-Voss, A., Krueger, G., Henighan, T., Child, R., Ramesh, A., Ziegler, D., Wu, J., Winter, C., & Hesse, C. (2020). 
+\newblock Language Models are Few-Shot Learners.
+\newblock \url{https://proceedings.neurips.cc/paper_files/paper/2020/file/1457c0d6bfcb4967418bfb8ac142f64a-Paper.pdf}
 
 \bibitem[Cao et al.(2022)]{Cao2022}
-Cao, Z., Smith, J., and Lee, M. 2022.
+Cao, Z., Smith, J., and Lee, M. (2022).
 \newblock Can Prompt Probe Pretrained Language Models? Understanding the Invisible Risks from a Causal View.
 \newblock \textit{AI and Society Journal}, 18(2), 154-165.
+\newblock \url{https://arxiv.org/pdf/2203.12258}
+
+\bibitem[Funelas(2024)]{Funelas2024}
+Funelas, R. (2024, January 31).
+\newblock ChatGPT Language Capabilities.
+\newblock \textit{Tomedes}.
+\newblock \url{https://www.tomedes.com/translator-hub/chatgpt-language-capabilities}
+
+\bibitem[Gao & Mavris(2022)]{Gao2022}
+Gao, Z., & Mavris, D. N. (2022).
+\newblock Statistics and Machine Learning in Aviation Environmental Impact Analysis: A Survey of Recent Progress.
+\newblock \textit{Aerospace}, 9(12), 750.
+\newblock \url{https://doi.org/10.3390/aerospace9120750}
+
+\bibitem[Jiang et al.(2020)]{Jiang2020}
+Jiang, Z., Xu, F. F., Araki, J., & Neubig, G. (2020).
+\newblock How Can We Know What Language Models Know?
+\newblock \textit{Transactions of the Association for Computational Linguistics}, 8, 423–438.
+\newblock \url{https://doi.org/10.1162/tacl_a_00324}
+
+\bibitem[Kelly(2024)]{Kelly2024}
+Kelly, W. (2024, February 27).
+\newblock GPT-3.5 vs. GPT-4: Biggest differences to consider.
+\newblock \textit{TechTarget. Enterprise AI}.
+\newblock \url{https://www.techtarget.com/searchEnterpriseAI/tip/GPT-35-vs-GPT-4-Biggest-differences-to-consider}
+
+\bibitem[Kotek et al.(2023)]{Kotek2023}
+Kotek, H., Dockum, R., & Sun, D. (2023).
+\newblock Gender bias and stereotypes in Large Language Models.
+\newblock \url{https://doi.org/10.1145/3582269.3615599}
+
+\bibitem[Kruspe(2024)]{Kruspe2024}
+Kruspe, A. (2024).
+\newblock Towards detecting unanticipated bias in Large Language Models.
+\newblock \url{https://arxiv.org/pdf/2404.02650}
+
+\bibitem[Latviešu valoda(n.d.)]{Latviesu2024}
+Latviešu valoda. (n.d.).
+\newblock Latviešu Valodas Aģentūra. 
+\newblock Retrieved June 1, 2024, from \url{https://valoda.lv/valsts-valoda/}
+
+\bibitem[Li et al.(2022)]{Li2022}
+Li, J., Cotterell, R., & Sachan, M. (2022).
+\newblock Probing via Prompting.
+\newblock \textit{ArXiv (Cornell University)}.
+\newblock \url{https://doi.org/10.48550/arxiv.2207.01736}
+
+\bibitem[Lucchi(2023)]{Lucchi2023}
+Lucchi, N. (2023).
+\newblock ChatGPT: A Case Study on Copyright Challenges for Generative Artificial Intelligence Systems.
+\newblock \textit{European Journal of Risk Regulation}, 1–23.
+\newblock \url{https://doi.org/10.1017/err.2023.59}
+
+\bibitem[Nadeem et al.(2020)]{Nadeem2020}
+Nadeem, M., Bethke, A., & Reddy, S. (2020).
+\newblock StereoSet: Measuring stereotypical bias in pretrained language models.
+\newblock \url{https://arxiv.org/pdf/2004.09456}
+
+\bibitem[Narain(2023)]{Narain2023}
+Narain, A. (2023, June 7).
+\newblock Unmasking Bias —Assessing Fairness in Large Language Models.
+\newblock \textit{Medium}.
+\newblock \url{https://medium.com/@arpitnarain/unmasking-bias-assessing-fairness-in-large-language-models-a722624e4483}
+
+\bibitem[OpenAI(2023)]{OpenAI2023}
+OpenAI. (2023).
+\newblock GPT-4 Technical Report.
+\newblock \textit{ArXiv (Cornell University)}.
+\newblock \url{https://doi.org/10.48550/arxiv.2303.08774}
+
+\bibitem[Smith et al.(2022)]{Smith2022}
+Smith, E., Hall, M., Kambadur, M., Presani, E., Williams, A., & Ai, M. (2022).
+\newblock “I’m sorry to hear that”: Finding New Biases in Language Models with a Holistic Descriptor Dataset.
+\newblock \textit{pp. 9180–9211}.
+\newblock \url{https://aclanthology.org/2022.emnlp-main.625.pdf}
+
+\bibitem[Sun et al.(2023)]{Sun2023}
+Sun, D. Q., Abzaliev, A., Kotek, H., Xiu, Z., Klein, C., & Williams, J. D. (2023, November 7).
+\newblock DELPHI: Data for Evaluating LLMs’ Performance in Handling Controversial Issues.
+\newblock \textit{ArXiv.org}.
+\newblock \url{https://doi.org/10.48550/arXiv.2310.18130}
+
+\bibitem[Suresh & Guttag(2021)]{Suresh2021}
+Suresh, H., & Guttag, J. (2021).
+\newblock A Framework for Understanding Sources of Harm throughout the Machine Learning Life Cycle.
+\newblock \textit{Equity and Access in Algorithms, Mechanisms, and Optimization}.
+\newblock \url{https://doi.org/10.1145/3465416.3483305}
+
+\bibitem[Tamkin et al.(2023)]{Tamkin2023}
+Tamkin, A., Askell, A., Lovitt, L., Durmus, E., Joseph, N., Kravec, S., Nguyen, K., Kaplan, J., & Ganguli, D. (2023).
+\newblock Evaluating and Mitigating Discrimination in Language Model Decisions.
+\newblock \textit{ArXiv.org}.
+\newblock \url{https://doi.org/10.48550/arxiv.2312.03689}
+
+\bibitem[Taulli(2023)]{Taulli2023}
+Taulli, T. (2023).
+\newblock AI Fundamentals.
+\newblock \textit{Apress EBooks}, 47–76.
+\newblock \url{https://doi.org/10.1007/978-1-4842-9367-6_3}
+
+\bibitem[WordsRated(2023)]{WordsRated2023}
+WordsRated. (2023, December 29).
+\newblock How Many People Speak English – WordsRated.
+\newblock \url{https://wordsrated.com/how-many-people-speak-english/}
 
 \bibitem[Xu et al.(2024)]{Xu2024}
-Xu, L., Wang, Y., and Zhao, X. 2024.
+Xu, L., Wang, Y., and Zhao, X. (2024).
 \newblock Mitigating Negative Impacts of Prompt Bias.
 \newblock \textit{Journal of AI Research}, 35(1), 87-104.
+\newblock \url{https://www.jair.org/index.php/jair/article/view/13265}
 
 \end{thebibliography}
 
